--- a/src/Current.css
+++ b/src/Current.css
@@ -5,9 +5,10 @@
 .current-block {
     background-color: #3b444d;
     border-radius: 1rem;
-    margin: 1rem;
+    /* margin: 1rem;
     margin-bottom: 4rem;
-    margin-right: 5rem;
+    margin-right: 5rem; */
+    margin: 0 5rem 3rem;
     padding: 1.2rem;
     /* max-width: 40rem; */
     height: 24rem;
