--- a/src/Day.css
+++ b/src/Day.css
@@ -6,7 +6,7 @@
     margin-bottom: 0.7rem;
     padding: 1rem;
     font-size: 1.6rem;
-    width: 35rem;
+    width: 30rem;
 }
 
 .menu {
